Maintain under Parted Maintainer Team

--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,13 @@
 Source: pyparted
 Section: python
 Priority: optional
-Maintainer: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
+Maintainer: Parted Maintainer Team <parted-maintainers@lists.alioth.debian.org>
 Uploaders: Luca Falavigna <dktrkranz@debian.org>
 Build-Depends: debhelper (>= 7.0.50), python-all-dev (>= 2.5), python-all-dbg (>= 2.5), python-support, pkg-config, libparted-2.1-dev (>= 2.1), automake, libdevmapper-dev, uuid-dev, python-decorator
 Standards-Version: 3.8.4
 Homepage: http://fedorahosted.org/pyparted/
-Vcs-Svn: svn://svn.debian.org/python-modules/packages/pyparted/trunk/
-Vcs-Browser: http://svn.debian.org/viewsvn/python-modules/packages/pyparted/trunk/
+Vcs-Git: git://git.debian.org/git/parted/debian/pyparted.git
+Vcs-Browser: http://git.debian.org/?p=parted/debian/pyparted.git
 
 Package: python-parted
 Architecture: any
