--- a/debian/rules
+++ b/debian/rules
@@ -33,3 +33,4 @@ override_dh_auto_install:
 
 override_dh_strip:
 	dh_strip --dbg-package=python-parted-dbg -X_pedmodule_d.so
+	cd debian/python-parted-dbg/usr/lib/debug/usr/lib && mv pyshared pymodules
