--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,8 @@ Section: python
 Priority: optional
 Maintainer: Parted Maintainer Team <parted-maintainers@lists.alioth.debian.org>
 Uploaders: Luca Falavigna <dktrkranz@debian.org>
-Build-Depends: debhelper (>= 7.0.50), python-all-dev (>= 2.5), python-all-dbg (>= 2.5), python-support, pkg-config, libparted0-dev (>= 2.2), python-decorator
+Build-Depends: debhelper (>= 7.0.50), python-all-dev (>= 2.5), python-all-dbg (>= 2.5), python-support, pkg-config, libparted0-dev (>= 2.2), python-decorator, autoconf, automake, libtool
+Build-Conflicts: autoconf2.13, automake1.4
 Standards-Version: 3.8.4
 Homepage: http://fedorahosted.org/pyparted/
 Vcs-Git: git://git.debian.org/git/parted/debian/pyparted.git
