Imported Upstream version 3.6

--- a/configure.ac
+++ b/configure.ac
@@ -18,15 +18,23 @@ dnl Red Hat, Inc.
 dnl
 dnl Red Hat Author(s): David Cantrell <dcantrell@redhat.com>
 
-m4_define(libparted_required_version, 2.2)
-m4_define(python_required_version, 2.5)
+m4_define(libparted_required_version, 2.3)
+m4_define(python_required_version, 2.7)
 
 AC_PREREQ(2.59)
-AC_INIT([pyparted], [3.5], [dcantrell@redhat.com])
-AM_INIT_AUTOMAKE
+AC_INIT([pyparted], [3.6], [pyparted-devel@redhat.com])
+AM_INIT_AUTOMAKE([color-tests])
 AC_CONFIG_SRCDIR([src/_pedmodule.c])
 AC_CONFIG_HEADER([config.h])
-AC_CONFIG_FILES([Makefile include/Makefile include/docstrings/Makefile include/typeobjects/Makefile src/Makefile src/parted/Makefile tests/Makefile tests/_ped/Makefile tests/parted/Makefile])
+AC_CONFIG_FILES([Makefile
+                 include/Makefile
+                 include/docstrings/Makefile
+                 include/typeobjects/Makefile
+                 src/Makefile
+                 src/parted/Makefile
+                 tests/Makefile
+                 tests/_ped/Makefile
+                 tests/parted/Makefile])
 
 AC_CONFIG_MACRO_DIR([m4])
 
@@ -46,5 +54,6 @@ AM_CHECK_PYTHON_HEADERS(,[AC_MSG_ERROR(could not find Python headers or library)
 
 dnl Check for GNU parted
 AM_CHECK_LIBPARTED(libparted_required_version)
+AM_CHECK_PED_PARTITION_LEGACY_BOOT
 
 AC_OUTPUT
