--- a/config.h.in
+++ b/config.h.in
@@ -15,6 +15,9 @@
 /* Define to 1 if you have the <parted/parted.h> header file. */
 #undef HAVE_PARTED_PARTED_H
 
+/* Define if libparted has 'PED_PARTITION_LEGACY_BOOT' constant. */
+#undef HAVE_PED_PARTITION_LEGACY_BOOT
+
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
 
@@ -54,9 +57,6 @@
 
 /* Define to the one symbol short name of this package. */
 #undef PACKAGE_TARNAME
-
-/* Define to the home page for this package. */
-#undef PACKAGE_URL
 
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
