--- a/debian/rules
+++ b/debian/rules
@@ -29,6 +29,7 @@ override_dh_auto_install:
 		(cd build/py$$pyvers-dbg/; $(MAKE) install DESTDIR=$(CURDIR)/debian/python-parted-dbg); \
 		(cd $(CURDIR)/debian/python-parted-dbg/usr/lib/python$$pyvers/*-packages; mv _pedmodule.so _pedmodule_d.so); \
 	done
+	find $(CURDIR)/debian/python-parted -name "*.la" -delete
 	find $(CURDIR)/debian/python-parted-dbg -name "*parted" -exec rm -fr {} +
 
 override_dh_strip:
