--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: pyparted
 Section: python
 Priority: optional
 Maintainer: Parted Maintainer Team <parted-maintainers@lists.alioth.debian.org>
-Uploaders: Luca Falavigna <dktrkranz@debian.org>
+Uploaders: Luca Falavigna <dktrkranz@debian.org>, Colin Watson <cjwatson@debian.org>
 Build-Depends: debhelper (>= 7.0.50~), python-all-dev (>= 2.6.6-13~), python-all-dbg (>= 2.6.6-13~), pkg-config, libparted0-dev (>= 2.3), dh-autoreconf
 Standards-Version: 3.9.2
 X-Python-Version: >= 2.6
