--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - 2.7
   - 3.3
 install:
+  - sudo apt-get update
   - sudo apt-get install libparted-dev parted
 script:
   - PARTED_DEBUG=1 make test
